--- a/libs/dh/imbalance-prices/tsconfig.lib.json
+++ b/libs/dh/imbalance-prices/tsconfig.lib.json
@@ -7,11 +7,6 @@
     "inlineSources": true,
     "types": []
   },
-  "exclude": [
-    "src/**/*.spec.ts",
-    "src/test-setup.ts",
-    "jest.config.ts",
-    "src/**/*.test.ts"
-  ],
-  "include": ["src/**/*.ts"]
+  "exclude": ["tests/**/*.spec.ts", "tests/test-setup.ts", "vite.config.mts", "tests/**/*.test.ts"],
+  "include": ["src/**/*.ts", "index.ts"]
 }
