Generate SBOM for DH API app

--- a/.github/actions/dotnet-prepare-outputs/action.yml
+++ b/.github/actions/dotnet-prepare-outputs/action.yml
@@ -13,20 +13,21 @@
 # limitations under the License.
 
 name: Prepare dotnet outputs
+description: Prepares dotnet outputs for publishing artifacts to dotnet.
 
 #
-# This action is called from:
-#  - the 'dotnet-solution-ci.yml' file IF the workflow parameter PREPARE_OUTPUTS is set to 'true'.
-#  - the 'dotnet-build-prerelease.yml' file.
+# This action is called from the 'dotnet-build-prerelease.yml' file.
 #
-# Prepared outputs will be zipped and uploaded as the 'dotnet' artifact.
-#
-# All 'apps' must be output into the '/functions\' subfolder, to match
-# how they are later retrieved in the '<domain>-stage-deployment.yml' file.
+# Prepared outputs will be zipped and uploaded as the 'ui_dotnet' artifact.
+# The SBOM file located in sbom_path must be copied to each output folder containing a deployable app.
 #
 
 inputs:
   output_path:
+    description: Path to output folder, where all published apps will be placed in subfolders.
+    required: true
+  sbom_path:
+    description: Path to the SBOM file that was generated prior to this step.
     required: true
 
 runs:
@@ -40,7 +41,8 @@ runs:
           --no-build \
           --no-restore \
           --configuration Release \
-          --output '${{ inputs.output_path }}\functions\bff'
+          --output '${{ inputs.output_path }}/functions/bff'
+        cp '${{ inputs.sbom_path }}' '${{ inputs.output_path }}/functions/bff/sbom.json'
 
     - name: Publish Swagger
       shell: bash
