--- a/.github/workflows/dh-ci-dotnet.yml
+++ b/.github/workflows/dh-ci-dotnet.yml
@@ -33,7 +33,7 @@ jobs:
   # Run tests in 'Tests.dll' except TelemetryTests
   dotnet_ci_test_except_telemetry:
     needs: dotnet_ci_build
-    uses: Energinet-DataHub/.github/.github/workflows/dotnet-postbuild-test.yml@v14
+    uses: Energinet-DataHub/.github/.github/workflows/dotnet-postbuild-test.yml@dotnet-build-prerelease-generate-sbom
     with:
       tests_dll_file_path: \apps\dh\api-dh\source\DataHub.WebApi.Tests\bin\Release\net9.0\Energinet.DataHub.WebApi.Tests.dll
       tests_filter_expression: DisplayName!~TelemetryTests
