--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -111,6 +111,9 @@
       "@energinet-datahub/dh/metering-point/feature-measurements": [
         "libs/dh/metering-point/feature-measurements/src/index.ts"
       ],
+      "@energinet-datahub/dh/metering-point/feature-move-in": [
+        "libs/dh/metering-point/feature-move-in/src/index.ts"
+      ],
       "@energinet-datahub/dh/metering-point/feature-overview": [
         "libs/dh/metering-point/feature-overview/src/index.ts"
       ],
