--- a/nx.json
+++ b/nx.json
@@ -7,6 +7,7 @@
       }
     }
   },
+  "nxCloudAccessToken": "Y2IyM2EwNDEtNjUxMy00OWFkLWI2ZTUtYjY2YzBiN2Y4YTUwfHJlYWQ=",
   "parallel": 1,
   "defaultProject": "app-dh",
   "generators": {
@@ -174,6 +175,5 @@
       "!{projectRoot}/src/test-setup.[jt]s"
     ]
   },
-  "defaultBase": "main",
-  "nxCloudId": "6124f33c6b561869a0db14ff"
+  "defaultBase": "main"
 }
