--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -139,6 +139,7 @@
       "@energinet-datahub/dh/reports/feature-settlement-reports": [
         "libs/dh/reports/feature-settlement-reports/src/index.ts"
       ],
+      "@energinet-datahub/dh/charges/feature-prices": ["libs/dh/charges/feature-prices/index.ts"],
       "@energinet-datahub/dh/shared/assets": ["libs/dh/shared/assets/src/index.ts"],
       "@energinet-datahub/dh/shared/data-access-graphql": [
         "libs/dh/shared/data-access-graphql/src/index.ts"
