--- a/.github/workflows/watt-ci.yml
+++ b/.github/workflows/watt-ci.yml
@@ -23,6 +23,10 @@ on:
 
 env:
   APP_NAME: designsystem
+  # Nx Cloud
+  NX_BRANCH: ${{ github.event.number }}
+  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
+  NX_CI_EXECUTION_ID: ${{ github.run_id }}
 
 jobs:
   #
