--- a/.github/workflows/watt-cd.yml
+++ b/.github/workflows/watt-cd.yml
@@ -18,6 +18,12 @@ name: Watt CD
 permissions:
   contents: read
 
+env:
+  # Nx Cloud
+  NX_BRANCH: ${{ github.event.number }}
+  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
+  NX_CI_EXECUTION_ID: ${{ github.run_id }}
+
 on:
   push:
     branches:
