--- a/.github/workflows/dh-healthchecks.yml
+++ b/.github/workflows/dh-healthchecks.yml
@@ -19,6 +19,10 @@ permissions:
 env:
   # See https://github.com/cypress-io/cypress/issues/25357
   ELECTRON_EXTRA_LAUNCH_ARGS: --disable-gpu
+  # Nx Cloud
+  NX_BRANCH: ${{ github.event.number }}
+  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
+  NX_CI_EXECUTION_ID: ${{ github.run_id }}
 on:
   schedule:
     - cron: 0 * * * *
