--- a/libs/dh/shared/assets/src/assets/configuration/dh-app-environment.local.json
+++ b/libs/dh/shared/assets/src/assets/configuration/dh-app-environment.local.json
@@ -2,5 +2,8 @@
   "current": "localhost",
   "applicationInsights": {
     "connectionString": "<connection-string>"
+  },
+  "microsoftClarity": {
+    "projectId": "<project-id>"
   }
 }
