--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -181,6 +181,9 @@
       "@energinet-datahub/dh/shared/util-application-insights": [
         "libs/dh/shared/util-application-insights/src/index.ts"
       ],
+      "@energinet-datahub/dh/shared/feature-microsoft-clarity": [
+        "libs/dh/shared/feature-microsoft-clarity/src/index.ts"
+      ],
       "@energinet-datahub/dh/shared/util-assert": ["libs/dh/shared/util-assert/src/index.ts"],
       "@energinet-datahub/dh/shared/util-new-version-manager": [
         "libs/dh/shared/util-new-version-manager/src/index.ts"
