--- a/.github/workflows/ci-orchestrator.yml
+++ b/.github/workflows/ci-orchestrator.yml
@@ -77,6 +77,7 @@ jobs:
   # Branch policy status check
   #
   allow_merge_ci_orchestrator:
+    permissions: {}
     runs-on: ubuntu-latest
     needs:
       [
