--- a/.github/workflows/dh-ci-frontend.yml
+++ b/.github/workflows/dh-ci-frontend.yml
@@ -27,6 +27,9 @@ env:
   NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
   NX_CI_EXECUTION_ID: ${{ github.run_id }}
 
+permissions:
+  contents: read
+
 jobs:
   #
   # Frontend
