chore: Add permissions to workflows.

--- a/.github/workflows/dh-ci-dotnet.yml
+++ b/.github/workflows/dh-ci-dotnet.yml
@@ -19,7 +19,10 @@ on:
   workflow_call: {}
 
 permissions:
-  contents: read
+  checks: write
+  issues: read
+  pull-requests: write
+  id-token: write
 
 jobs:
   # Build all projects within solution
