--- a/.github/workflows/dh-ci-dotnet.yml
+++ b/.github/workflows/dh-ci-dotnet.yml
@@ -19,7 +19,7 @@ on:
   workflow_call: {}
 
 permissions:
-  contents: read
+  contents: write
   checks: write
   issues: read
   pull-requests: write
