3395: Add permissions to workflows. (#4817)

--- a/.github/workflows/dh-ci-dotnet.yml
+++ b/.github/workflows/dh-ci-dotnet.yml
@@ -18,6 +18,13 @@ name: DH CI dotnet
 on:
   workflow_call: {}
 
+permissions:
+  contents: write
+  checks: write
+  issues: read
+  pull-requests: write
+  id-token: write
+
 jobs:
   # Build all projects within solution
   dotnet_ci_build:
