chore: Add permissions to workflows.

--- a/.github/workflows/watt-ci-package.yml
+++ b/.github/workflows/watt-ci-package.yml
@@ -14,7 +14,8 @@
 name: Watt CI - Package
 
 permissions:
-  contents: read
+  contents: write
+  pull-requests: read
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
