--- a/package.json
+++ b/package.json
@@ -59,17 +59,17 @@
   },
   "dependencies": {
     "@analogjs/vite-plugin-angular": "1.20",
-    "@angular/animations": "20.1.3",
-    "@angular/cdk": "20.1.3",
-    "@angular/common": "20.1.3",
-    "@angular/compiler": "20.1.3",
-    "@angular/core": "20.1.3",
-    "@angular/forms": "20.1.3",
-    "@angular/material": "20.1.3",
-    "@angular/platform-browser": "20.1.3",
-    "@angular/platform-browser-dynamic": "20.1.3",
-    "@angular/router": "20.1.3",
-    "@angular/service-worker": "20.1.3",
+    "@angular/animations": "20.3.6",
+    "@angular/cdk": "20.2.9",
+    "@angular/common": "20.3.6",
+    "@angular/compiler": "20.3.6",
+    "@angular/core": "20.3.6",
+    "@angular/forms": "20.3.6",
+    "@angular/material": "20.2.9",
+    "@angular/platform-browser": "20.3.6",
+    "@angular/platform-browser-dynamic": "20.3.6",
+    "@angular/router": "20.3.6",
+    "@angular/service-worker": "20.3.6",
     "@apollo/client": "3.13.8",
     "@azure/msal-angular": "4.0.19",
     "@azure/msal-browser": "4.21.0",
@@ -104,12 +104,12 @@
   "devDependencies": {
     "@actions/core": "1.10.1",
     "@analogjs/vitest-angular": "1.19.1",
-    "@angular-eslint/eslint-plugin": "20.1.1",
-    "@angular-eslint/eslint-plugin-template": "20.1.1",
-    "@angular-eslint/template-parser": "20.1.1",
-    "@angular/cli": "20.1.3",
-    "@angular/compiler-cli": "20.1.3",
-    "@angular/language-service": "20.1.3",
+    "@angular-eslint/eslint-plugin": "20.4.0",
+    "@angular-eslint/eslint-plugin-template": "20.4.0",
+    "@angular-eslint/template-parser": "20.4.0",
+    "@angular/cli": "~20.3.0",
+    "@angular/compiler-cli": "20.3.6",
+    "@angular/language-service": "20.3.6",
     "@babel/core": "7.26.10",
     "@babel/runtime": "7.26.10",
     "@badeball/cypress-cucumber-preprocessor": "22.2.0",
@@ -128,19 +128,19 @@
     "@jsverse/transloco-optimize": "7.0.1",
     "@ngrx/eslint-plugin": "18.1.1",
     "@nx-dotnet/utils": "2.5.0",
-    "@nx/angular": "21.3.9",
-    "@nx/cypress": "21.3.9",
-    "@nx/devkit": "21.3.9",
-    "@nx/eslint": "21.3.9",
-    "@nx/eslint-plugin": "21.3.9",
-    "@nx/js": "21.3.9",
-    "@nx/plugin": "21.3.9",
-    "@nx/storybook": "21.3.9",
-    "@nx/vite": "21.3.9",
-    "@nx/web": "21.3.9",
-    "@nx/workspace": "21.3.9",
+    "@nx/angular": "21.6.5",
+    "@nx/cypress": "21.6.5",
+    "@nx/devkit": "21.6.5",
+    "@nx/eslint": "21.6.5",
+    "@nx/eslint-plugin": "21.6.5",
+    "@nx/js": "21.6.5",
+    "@nx/plugin": "21.6.5",
+    "@nx/storybook": "21.6.5",
+    "@nx/vite": "21.6.5",
+    "@nx/web": "21.6.5",
+    "@nx/workspace": "21.6.5",
     "@openapitools/openapi-generator-cli": "2.13.4",
-    "@schematics/angular": "20.1.3",
+    "@schematics/angular": "20.3.6",
     "@storybook/addon-a11y": "9.0.10",
     "@storybook/addon-docs": "9.0.10",
     "@storybook/addon-links": "9.0.10",
@@ -187,17 +187,17 @@
     "jsonc-eslint-parser": "2.1.0",
     "minimatch": "10.0.1",
     "msw": "2.7.3",
-    "ng-packagr": "20.1.0",
-    "nx": "21.3.9",
+    "ng-packagr": "20.3.0",
+    "nx": "21.6.5",
     "prettier": "3.5.3",
     "semver": "7.7.1",
     "shell-quote": "1.8.2",
     "source-map-explorer": "2.5.3",
     "storybook-addon-pseudo-states": "9.0.10",
     "ts-node": "10.9.2",
-    "typescript": "5.8.2",
+    "typescript": "5.9.3",
     "typescript-eslint": "7.16.0",
-    "vite": "5.4.20",
+    "vite": "7.1.9",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "1.6.1",
     "xml2js": "0.6.2"
