--- a/apps/dh/e2e-dh/package.json
+++ b/apps/dh/e2e-dh/package.json
@@ -1,9 +1,16 @@
 {
+  "engines": {
+    "node": "22.17.1"
+  },
   "dependencies": {
     "@nx/cypress": "21.6.5",
     "@testing-library/cypress": "10.0.3",
     "cypress": "14.5.4",
     "typescript": "5.9.3",
-    "vite": "7.1.9"
+    "vite": "7.1.11"
+  },
+  "volta": {
+    "//node-comment": "Keep this in sync with 'engines' config at the top of the current file",
+    "node": "22.17.1"
   }
 }
