--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -43,6 +43,7 @@
       "@energinet-datahub/dh/admin/shell": ["libs/dh/admin/shell/src/index.ts"],
       "@energinet-datahub/dh/auth/msal": ["libs/dh/auth/feature-msal/src/index.ts"],
       "@energinet-datahub/dh/charges/feature-charges": ["libs/dh/charges/feature-charges/index.ts"],
+      "@energinet-datahub/dh/charges/feature-prices": ["libs/dh/charges/feature-prices/index.ts"],
       "@energinet-datahub/dh/core/feature-notifications": [
         "libs/dh/core/feature-notifications/src/index.ts"
       ],
