dx: hot reload bff with schema gen (#4847)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/dh/shared/domain/project.json
+++ b/libs/dh/shared/domain/project.json
@@ -30,7 +30,7 @@
       "dependsOn": [
         {
           "projects": ["api-dh"],
-          "target": "update-graphql-schema"
+          "target": "build"
         }
       ],
       "outputs": [
@@ -57,7 +57,7 @@
       "dependsOn": [
         {
           "projects": ["api-dh"],
-          "target": "watch-update-graphql-schema"
+          "target": "serve"
         }
       ],
       "outputs": [
