--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -263,6 +263,7 @@
       "@energinet-datahub/watt/modal": ["libs/watt/package/modal/index.ts"],
       "@energinet-datahub/watt/paginator": ["libs/watt/package/paginator/index.ts"],
       "@energinet-datahub/watt/phone-field": ["libs/watt/package/phone-field/index.ts"],
+      "@energinet-datahub/watt/portal": ["libs/watt/package/portal/index.ts"],
       "@energinet-datahub/watt/progress-tracker": ["libs/watt/package/progress-tracker/index.ts"],
       "@energinet-datahub/watt/query-params": ["libs/watt/package/query-params/index.ts"],
       "@energinet-datahub/watt/radio": ["libs/watt/package/radio/index.ts"],
