--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -49,6 +49,7 @@
       ],
       "@energinet-datahub/dh/core/routing": ["libs/dh/core/routing/src/index.ts"],
       "@energinet-datahub/dh/core/shell": ["libs/dh/core/shell/src/index.ts"],
+      "@energinet-datahub/dh/core/ui-toolbar": ["libs/dh/core/ui-toolbar/index.ts"],
       "@energinet-datahub/dh/dev-examples/feature-processes": [
         "libs/dh/dev-examples/feature-processes/index.ts"
       ],
