--- a/libs/dh/core/ui-toolbar/tsconfig.lib.json
+++ b/libs/dh/core/ui-toolbar/tsconfig.lib.json
@@ -9,6 +9,6 @@
     "types": [],
     "lib": ["dom", "es2018"]
   },
-  "exclude": ["tests/test-setup.ts", "**/*.spec.ts", "jest.config.ts"],
+  "exclude": ["tests/test-setup.ts", "**/*.spec.ts", "vite.config.mts"],
   "include": ["**/*.ts"]
 }
