--- a/libs/dh/core/ui-toolbar-portal/project.json
+++ b/libs/dh/core/ui-toolbar-portal/project.json
@@ -1,15 +1,15 @@
 {
-  "name": "dh-ui-toolbar",
+  "name": "dh-ui-toolbar-portal",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "libs/dh/core/ui-toolbar/src",
+  "sourceRoot": "libs/dh/core/ui-toolbar-portal/src",
   "tags": ["product:dh", "domain:core", "type:ui"],
   "targets": {
     "test": {
       "executor": "@nx/vite:test",
-      "outputs": ["{workspaceRoot}/coverage/libs/dh/core/ui-toolbar"],
+      "outputs": ["{workspaceRoot}/coverage/libs/dh/core/ui-toolbar-portal"],
       "options": {
-        "config": "libs/dh/core/ui-toolbar/vite.config.mts"
+        "config": "libs/dh/core/ui-toolbar-portal/vite.config.mts"
       }
     },
     "lint": {
