--- a/apps/dh/api-dh/source/DataHub.WebApi/project.json
+++ b/apps/dh/api-dh/source/DataHub.WebApi/project.json
@@ -24,7 +24,7 @@
       ],
       "executor": "nx:run-commands",
       "options": {
-        "command": "dotnet watch --project apps/dh/api-dh/source/DataHub.WebApi/DataHub.WebApi.csproj --configuration=Debug"
+        "command": "dotnet watch --project apps/dh/api-dh/source/DataHub.WebApi/DataHub.WebApi.csproj --non-interactive --configuration=Debug"
       }
     }
   }
