--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -227,31 +227,71 @@
       "@energinet-datahub/tools/license": ["tools/license"],
       "@energinet-datahub/tools/package": ["tools/package"],
       "@energinet-datahub/tools/workspace": ["tools/workspace"],
+      "@energinet/watt/badge": ["libs/watt/package/badge/index.ts"],
+      "@energinet/watt/breadcrumbs": ["libs/watt/package/breadcrumbs/index.ts"],
       "@energinet/watt/button": ["libs/watt/package/button/index.ts"],
       "@energinet/watt/card": ["libs/watt/package/card/index.ts"],
       "@energinet/watt/checkbox": ["libs/watt/package/checkbox/index.ts"],
       "@energinet/watt/chip": ["libs/watt/package/chip/index.ts"],
+      "@energinet/watt/clipboard": ["libs/watt/package/clipboard/index.ts"],
+      "@energinet/watt/code": ["libs/watt/package/code/index.ts"],
       "@energinet/watt/core/breakpoints": ["libs/watt/package/core/breakpoints/index.ts"],
       "@energinet/watt/core/color": ["libs/watt/package/core/color/index.ts"],
       "@energinet/watt/core/date": ["libs/watt/package/core/date/index.ts"],
+      "@energinet/watt/danish-date-time": [
+        "libs/watt/package/core/date/watt-danish-datetime.providers.ts"
+      ],
+      "@energinet/watt/data": ["libs/watt/package/data/index.ts"],
+      "@energinet/watt/date": ["libs/watt/package/core/date/index.ts"],
+      "@energinet/watt/datepicker": ["libs/watt/package/picker/datepicker/index.ts"],
+      "@energinet/watt/datetime-field": ["libs/watt/package/datetime-field/index.ts"],
+      "@energinet/watt/datetimepicker": ["libs/watt/package/picker/datetimepicker/index.ts"],
+      "@energinet/watt/description-list": ["libs/watt/package/description-list/index.ts"],
+      "@energinet/watt/drawer": ["libs/watt/package/drawer/index.ts"],
+      "@energinet/watt/dropdown": ["libs/watt/package/dropdown/index.ts"],
+      "@energinet/watt/dropzone": ["libs/watt/package/dropzone/index.ts"],
       "@energinet/watt/empty-state": ["libs/watt/package/empty-state/index.ts"],
+      "@energinet/watt/expandable-card": ["libs/watt/package/expandable-card/index.ts"],
+      "@energinet/watt/expansion": ["libs/watt/package/expansion/index.ts"],
       "@energinet/watt/field": ["libs/watt/package/field/index.ts"],
       "@energinet/watt/file-field": ["libs/watt/package/file-field/index.ts"],
       "@energinet/watt/icon": ["libs/watt/package/icon/index.ts"],
       "@energinet/watt/icon/flags": ["libs/watt/package/icon/flags/index.ts"],
+      "@energinet/watt/intersection-observer": [
+        "libs/watt/package/utils/intersection-observer/index.ts"
+      ],
+      "@energinet/watt/menu": ["libs/watt/package/menu/index.ts"],
+      "@energinet/watt/modal": ["libs/watt/package/modal/index.ts"],
       "@energinet/watt/paginator": ["libs/watt/package/paginator/index.ts"],
+      "@energinet/watt/phone-field": ["libs/watt/package/phone-field/index.ts"],
       "@energinet/watt/picker/__shared": ["libs/watt/package/picker/__shared/index.ts"],
       "@energinet/watt/picker/datepicker": ["libs/watt/package/picker/datepicker/index.ts"],
+      "@energinet/watt/portal": ["libs/watt/package/portal/index.ts"],
+      "@energinet/watt/progress-tracker": ["libs/watt/package/progress-tracker/index.ts"],
+      "@energinet/watt/query-params": ["libs/watt/package/query-params/index.ts"],
+      "@energinet/watt/radio": ["libs/watt/package/radio/index.ts"],
+      "@energinet/watt/resize-observer": ["libs/watt/package/utils/resize-observer/index.ts"],
       "@energinet/watt/search": ["libs/watt/package/search/index.ts"],
+      "@energinet/watt/segmented-buttons": ["libs/watt/package/segmented-buttons/index.ts"],
+      "@energinet/watt/shell": ["libs/watt/package/shell/index.ts"],
+      "@energinet/watt/slide-toggle": ["libs/watt/package/slide-toggle/index.ts"],
       "@energinet/watt/slider": ["libs/watt/package/slider/index.ts"],
       "@energinet/watt/spinner": ["libs/watt/package/spinner/index.ts"],
+      "@energinet/watt/stepper": ["libs/watt/package/stepper/index.ts"],
       "@energinet/watt/table": ["libs/watt/package/table/index.ts"],
+      "@energinet/watt/tabs": ["libs/watt/package/tabs/index.ts"],
+      "@energinet/watt/text-field": ["libs/watt/package/text-field/index.ts"],
+      "@energinet/watt/textarea-field": ["libs/watt/package/textarea-field/index.ts"],
+      "@energinet/watt/timepicker": ["libs/watt/package/picker/timepicker/index.ts"],
       "@energinet/watt/toast": ["libs/watt/package/toast/index.ts"],
       "@energinet/watt/tooltip": ["libs/watt/package/tooltip/index.ts"],
       "@energinet/watt/utils/css": ["libs/watt/package/utils/css/index.ts"],
       "@energinet/watt/utils/resize-observer": ["libs/watt/package/utils/resize-observer/index.ts"],
+      "@energinet/watt/validation-message": ["libs/watt/package/validation-message/index.ts"],
       "@energinet/watt/validators": ["libs/watt/package/validators/index.ts"],
       "@energinet/watt/vater": ["libs/watt/package/vater/index.ts"],
+      "@energinet/watt/year-field": ["libs/watt/package/year-field/index.ts"],
+      "@energinet/watt/yearmonth-field": ["libs/watt/package/yearmonth-field/index.ts"],
       "rxjs": ["./node_modules/rxjs"]
     }
   },
