--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "test": "nx run-many --targets=test,component-test --parallel",
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
-    "take": "nx run @energinet-datahub/tools/github:create-branch-from-issue",
-    "branch": "nx run @energinet-datahub/tools/github:create-branch",
-    "pr": "nx run @energinet-datahub/tools/github:create-pr",
+    "take": "nx run @energinet-datahub/tools/github:create-branch-from-issue --no-nx-cache",
+    "branch": "nx run @energinet-datahub/tools/github:create-branch --no-nx-cache",
+    "pr": "nx run @energinet-datahub/tools/github:create-pr --no-nx-cache",
     "task": "bun run $(jq .scripts package.json | cut -d'\"' -f2 | fzf | xargs)",
     "review": "gh pr checkout --"
   },
