--- a/libs/dh/admin/feature-user-roles/project.json
+++ b/libs/dh/admin/feature-user-roles/project.json
@@ -8,7 +8,10 @@
   "targets": {
     "test": {
       "executor": "@nx/vite:test",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "configFile": "libs/dh/admin/feature-user-roles/vite.config.mts"
+      }
     },
     "lint": {
       "executor": "@nx/eslint:lint"
