--- a/libs/dh/admin/feature-user-roles/tsconfig.lib.json
+++ b/libs/dh/admin/feature-user-roles/tsconfig.lib.json
@@ -7,6 +7,6 @@
     "inlineSources": true,
     "types": []
   },
-  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "jest.config.ts", "**/*.test.ts"],
-  "include": ["**/*.ts"]
+  "exclude": ["src/test-setup.ts", "**/*.spec.ts"],
+  "include": ["src/**/*.ts"]
 }
