--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -176,6 +176,9 @@
       "@energinet-datahub/dh/shared/feature-highlight": [
         "libs/dh/shared/feature-highlight/index.ts"
       ],
+      "@energinet-datahub/dh/shared/feature-microsoft-clarity": [
+        "libs/dh/shared/feature-microsoft-clarity/src/index.ts"
+      ],
       "@energinet-datahub/dh/shared/navigation": ["libs/dh/shared/navigation/src/index.ts"],
       "@energinet-datahub/dh/shared/release-toggle": ["libs/dh/shared/release-toggle/src/index.ts"],
       "@energinet-datahub/dh/shared/test-util": ["libs/dh/shared/test-util/src/index.ts"],
