--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -123,6 +123,9 @@
       "@energinet-datahub/dh/metering-point/feature-process-overview": [
         "libs/dh/metering-point/feature-process-overview/src/index.ts"
       ],
+      "@energinet-datahub/dh/metering-point/feature-prices": [
+        "libs/dh/metering-point/feature-prices/src/index.ts"
+      ],
       "@energinet-datahub/dh/metering-point/feature-search": [
         "libs/dh/metering-point/feature-search/src/index.ts"
       ],
