--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -120,6 +120,9 @@
       "@energinet-datahub/dh/metering-point/feature-overview": [
         "libs/dh/metering-point/feature-overview/src/index.ts"
       ],
+      "@energinet-datahub/dh/metering-point/feature-prices": [
+        "libs/dh/metering-point/feature-prices/src/index.ts"
+      ],
       "@energinet-datahub/dh/metering-point/feature-process-overview": [
         "libs/dh/metering-point/feature-process-overview/src/index.ts"
       ],
