--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "@graphql-codegen/import-types-preset": "3.0.1",
     "@graphql-codegen/typed-document-node": "5.1.2",
     "@graphql-codegen/typescript": "4.1.6",
+    "@graphql-codegen/typescript-apollo-client-helpers": "^3.0.1",
     "@graphql-codegen/typescript-msw": "3.0.1",
     "@graphql-codegen/typescript-operations": "4.6.1",
     "@graphql-eslint/eslint-plugin": "4.4.0",
