--- a/.github/workflows/dh-ci-dotnet.yml
+++ b/.github/workflows/dh-ci-dotnet.yml
@@ -24,11 +24,12 @@ permissions:
   issues: read
   pull-requests: write
   id-token: write
+  attestations: write
 
 jobs:
   # Build all projects within solution
   dotnet_ci_build:
-    uses: Energinet-DataHub/.github/.github/workflows/dotnet-build-prerelease.yml@v15
+    uses: Energinet-DataHub/.github/.github/workflows/dotnet-build-prerelease.yml@v16
     with:
       solution_file_path: apps/dh/api-dh/DataHub.WebApi.sln
       release_name_prefix: ui_dotnet
@@ -37,7 +38,7 @@ jobs:
   # Run tests in 'Tests.dll' except TelemetryTests
   dotnet_ci_test_except_telemetry:
     needs: dotnet_ci_build
-    uses: Energinet-DataHub/.github/.github/workflows/dotnet-postbuild-test.yml@v15
+    uses: Energinet-DataHub/.github/.github/workflows/dotnet-postbuild-test.yml@v16
     with:
       tests_dll_file_path: \apps\dh\api-dh\source\DataHub.WebApi.Tests\bin\Release\net9.0\Energinet.DataHub.WebApi.Tests.dll
       tests_filter_expression: DisplayName!~TelemetryTests
@@ -52,7 +53,7 @@ jobs:
   # Run only TelemetryTests in 'Tests.dll'
   dotnet_ci_test_telemetry:
     needs: dotnet_ci_build
-    uses: Energinet-DataHub/.github/.github/workflows/dotnet-postbuild-test.yml@v15
+    uses: Energinet-DataHub/.github/.github/workflows/dotnet-postbuild-test.yml@v16
     with:
       tests_dll_file_path: \apps\dh\api-dh\source\DataHub.WebApi.Tests\bin\Release\net9.0\Energinet.DataHub.WebApi.Tests.dll
       tests_filter_expression: DisplayName~TelemetryTests
