--- a/apps/dh/api-dh/source/DataHub.WebApi/DataHub.WebApi.csproj
+++ b/apps/dh/api-dh/source/DataHub.WebApi/DataHub.WebApi.csproj
@@ -58,8 +58,8 @@ limitations under the License.
     <PackageReference Include="Energinet.DataHub.EDI.B2CClient" Version="0.3.0" />
     <PackageReference Include="Energinet.DataHub.MarketParticipant.Authorization" Version="3.0.0" />
     <PackageReference Include="Energinet.DataHub.Measurements.Client" Version="11.3.0" />
-    <PackageReference Include="Energinet.DataHub.ProcessManager.Client" Version="8.1.0" />
-    <PackageReference Include="Energinet.DataHub.ProcessManager.Orchestrations.Abstractions" Version="2.25.21" />
+    <PackageReference Include="Energinet.DataHub.ProcessManager.Client" Version="8.3.2-alpha-327" />
+    <PackageReference Include="Energinet.DataHub.ProcessManager.Orchestrations.Abstractions" Version="2.26.6-alpha-327" />
     <PackageReference Include="Energinet.DataHub.Reports.Abstractions" Version="5.1.0" />
     <PackageReference Include="Energinet.DataHub.Reports.Client" Version="5.1.0" />
     <PackageReference Include="Energinet.DataHub.RevisionLog.Integration" Version="1.2.0" />
