--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,7 +11,6 @@
     "GraphQL.vscode-graphql",
     "ms-vscode.powershell",
     "redhat.vscode-yaml",
-    "github.vscode-github-actions",
-    "ms-azuretools.vscode-docker"
+    "github.vscode-github-actions"
   ]
 }
