--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,5 @@
   },
   "prettier.prettierPath": "./node_modules/prettier/index.cjs",
   "eslint.validate": ["json", "graphql"],
-  "dotnet.defaultSolution": "apps/dh/api-dh/DataHub.WebApi.sln",
-  "nxConsole.generateAiAgentRules": true
+  "dotnet.defaultSolution": "apps/dh/api-dh/DataHub.WebApi.sln"
 }
