feat(dh, metering-points): minor adjustments for process overview

--- a/libs/dh/shared/assets/src/assets/configuration/dh-app-environment.local.json
+++ b/libs/dh/shared/assets/src/assets/configuration/dh-app-environment.local.json
@@ -4,6 +4,6 @@
     "connectionString": "<connection-string>"
   },
   "microsoftClarity": {
-    "projectId": "<project-id>"
+    "projectId": "tr07ms69r2"
   }
 }
